Fix header spacing

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     align-self: center;
     padding: 0 24px;
     margin: 0 auto;
+    box-sizing: border-box
 
 }
 .header-logo {
@@ -37,11 +38,13 @@ body {
     display: flex;
     justify-content: flex-end;
     flex: 1;
+    
 }
 ul {
     display: flex;
     list-style: none; 
     gap: 16px;
+    
 }
 a {
     text-decoration: none;
@@ -68,6 +71,7 @@ a,
     gap: 16px;
     align-self: center;
     flex: 1;
+    box-sizing: border-box;
 }
 .hero-image {
     height: 200px;
